23.요소 슬라이드 - 슬라이드영역토글

--- a/css/main.css
+++ b/css/main.css
@@ -409,6 +409,7 @@ header .badges .badge {
   position: relative;
   overflow: hidden;
   transition: height .4s;
+  overflow: hidden;
 }
 .notice .promotion.hide {
   height: 0;
