--- a/css/main.css
+++ b/css/main.css
@@ -572,3 +572,22 @@ header .badges .badge {
   top: 0;
   left: 0;
 }
+.youtube .inner {
+  height: 700px;
+  /* position: relative;  위에 inner를 가진요소는 position값을 갖고있음.*/
+}
+.youtube .floating1 {
+  position:absolute;
+  top: 50px;
+  left: 0;
+}
+.youtube .floating2 {
+  position:absolute;
+  top: 350px;
+  left: 150;
+}
+.youtube .floating3 {
+  position:absolute;
+  top: -200px;
+  right: 0;
+}
