--- a/css/main.css
+++ b/css/main.css
@@ -409,7 +409,6 @@ header .badges .badge {
   position: relative;
   overflow: hidden;
   transition: height .4s;
-  overflow: hidden;
 }
 .notice .promotion.hide {
   height: 0;
@@ -424,21 +423,21 @@ header .badges .badge {
   margin-left: calc((819px * 3 + 20px) / -2);
 }
 .notice .promotion .swiper-slide {
+  position: relative;
   opacity: .5;
   transition: opacity 1s;
-  position: relative;
 }
 .notice .promotion .swiper-slide-active {
   opacity: 1;
 }
 .notice .promotion .swiper-slide .btn {
-  position:absolute;
-  bottom:0;
-  left:0;
-  right:0;
-  margin:auto;
+  /*width: 130px;*/
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  margin: auto;
 }
-
 .notice .promotion .swiper-pagination {
   bottom: 40px;
   left: 0;
@@ -491,7 +490,8 @@ header .badges .badge {
   color: #fff;
 }
 
-/* REWARDS */
+
+/*REWARDS*/
 .rewards {
   position: relative;
 }
@@ -517,13 +517,14 @@ header .badges .badge {
 }
 .rewards .btn-group {
   position: absolute;
-  bottom: 24px;
   right: 0;
+  bottom: 24px;
   width: 250px;
   display: flex;
   flex-wrap: wrap;
 }
 .rewards .btn-group .btn.sign-up {
+  /*width: 130px;*/
   margin-right: 10px;
 }
 .rewards .btn-group .btn.sign-in {
@@ -531,63 +532,67 @@ header .badges .badge {
 }
 .rewards .btn-group .btn.gift {
   margin-top: 10px;
-  flex-grow: 1;
+  flex: 1;
 }
-/* YOUTUBE VIDEO */
+
+
+/*YOUTUBE VIDEO*/
 .youtube {
-  position:relative;
+  position: relative;
   height: 700px;
   background-color: #333;
   overflow: hidden;
 }
-.youtube .youtube__area{
+.youtube .youtube__area {
   width: 1920px;
-  background-color: orange;
   position: absolute;
+  /* 16비율 */
   left: 50%;
   margin-left: calc(1920px / -2);
+  /* 9비율 */
   top: 50%;
   margin-top: calc(1920px * 9 / 16 / -2);
 }
-.youtube .youtube__area::before{
-  content:"";
+.youtube .youtube__area::before {
+  content: "";
   display: block;
+  /* 16:9 영상 비율로 요소 크기 만들기! */
   width: 100%;
   height: 0;
   padding-top: 56.25%;
 }
-.youtube .youtube__cover{
-  background-image: url("../images/video_cover_pattern.png");
-  background-color: rgba(0,0,0,.3);
+.youtube .youtube__cover {
   position: absolute;
   top: 0;
-  left:0;
+  left: 0;
   width: 100%;
   height: 100%;
+  background-color: rgba(0,0,0,.3);
+  background-image: url("../images/video_cover_pattern.png");
 }
 #player {
-  width:100%;
+  width: 100%;
   height: 100%;
   position: absolute;
   top: 0;
   left: 0;
 }
 .youtube .inner {
-  height: 700px;
-  /* position: relative;  위에 inner를 가진요소는 position값을 갖고있음.*/
+  height: inherit;
 }
 .youtube .floating1 {
-  position:absolute;
+  position: absolute;
   top: 50px;
   left: 0;
 }
 .youtube .floating2 {
-  position:absolute;
+  position: absolute;
   top: 350px;
-  left: 150;
+  left: 150px;
 }
 
-/* SEASON PRODUCT */
+
+/*SEASON PRODUCT*/
 .season-product {
   background-image: url("../images/season_product_bg.jpg");
 }
@@ -595,7 +600,7 @@ header .badges .badge {
   height: 400px;
 }
 .season-product .floating3 {
-  position:absolute;
+  position: absolute;
   top: -200px;
   right: 0;
 }
@@ -610,9 +615,8 @@ header .badges .badge {
 .season-product .text-group .description {
   margin-bottom: 15px;
 }
-.season-product .text-group .more {
 
-}
+
 /*RESERVE COFFEE*/
 .reserve-coffee {
   background-image: url("../images/reserve_bg.jpg");
@@ -636,7 +640,8 @@ header .badges .badge {
   right: 0;
 }
 
-/* PICK YOUR FAVORITE */
+
+/*PICK YOUR FAVORITE*/
 .pick-your-favorite {
   background-image: url("../images/favorite_bg.jpg");
   background-repeat: no-repeat;
@@ -648,20 +653,21 @@ header .badges .badge {
   padding: 110px 0;
 }
 .pick-your-favorite .text-group {
-  margin-left: 100px;
   width: 362px;
+  margin-left: 100px;
   display: flex;
-  flex-wrap:wrap;
   justify-content: flex-end;
+  flex-wrap: wrap;
 }
 .pick-your-favorite .text-group .title {
-  margin-bottom:40px;
+  margin-bottom: 40px;
 }
 .pick-your-favorite .text-group .description {
-  margin-bottom:40px;
+  margin-bottom: 40px;
 }
 
-/* RESERVE STORE */
+
+/*RESERVE STORE*/
 .reserve-store {
   background-image: url("../images/reserve_store_bg.jpg");
   background-repeat: no-repeat;
@@ -682,20 +688,19 @@ header .badges .badge {
 }
 .reserve-store .medal .front,
 .reserve-store .medal .back {
-  width: 334px;
-  height: 334px;
+  width: inherit;
+  height: inherit;
   position: absolute;
-  backface-visibility: hidden;
   transition: 1s;
+  backface-visibility: hidden;
 }
-.reserve-store .medal .front{
+.reserve-store .medal .front {
   transform: rotateY(0deg);
 }
-.reserve-store .medal:hover .front{
+.reserve-store .medal:hover .front {
   transform: rotateY(180deg);
 }
-.reserve-store .medal .back{
-
+.reserve-store .medal .back {
   transform: rotateY(-180deg);
 }
 .reserve-store .medal:hover .back {
@@ -708,6 +713,7 @@ header .badges .badge {
   right: 0;
   margin: auto;
 }
+
 
 /*FIND STORE*/
 .find-store {
